♻️ Refactor:시즌 완료 시 보상 참 목록 응답에 포함