@@ -2,13 +2,11 @@ package com.meisterbear.domain.story.service;
 
 import com.fasterxml.jackson.databind.JsonNode;
 import com.fasterxml.jackson.databind.ObjectMapper;
-import com.meisterbear.domain.character.entity.Character;
 import com.meisterbear.domain.character.entity.Collection;
-import com.meisterbear.domain.character.repository.CharacterRepository;
 import com.meisterbear.domain.character.repository.CollectionRepository;
-import com.meisterbear.domain.product.entity.Product;
-import com.meisterbear.domain.product.repository.ProductRepository;
-import com.meisterbear.domain.story.dto.response.CurrentSeasonResponse;
+import com.meisterbear.domain.charm.entity.Charm;
+import com.meisterbear.domain.charm.repository.CharmRepository;
+import com.meisterbear.domain.story.dto.response.RewardCharmResponse;
 import com.meisterbear.domain.story.dto.response.SceneResponse;
 import com.meisterbear.domain.story.dto.response.StoryCompleteResultResponse;
 import com.meisterbear.domain.story.dto.response.StoryDetailResponse;
@@ -20,15 +18,11 @@ import com.meisterbear.domain.story.exception.StoryErrorCode;
 import com.meisterbear.domain.story.repository.StoryRepository;
 import com.meisterbear.domain.story.repository.UserStoryProgressRepository;
 import com.meisterbear.global.exception.CustomException;
-import java.time.LocalDate;
 import java.util.ArrayList;
 import java.util.Comparator;
-import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
-import java.util.regex.Matcher;
-import java.util.regex.Pattern;
 import java.util.stream.Collectors;
 import java.util.stream.StreamSupport;
 import lombok.RequiredArgsConstructor;
@@ -42,12 +36,8 @@ import org.springframework.transaction.annotation.Transactional;
 @Transactional(readOnly = true)
 public class StoryService {
 
-    // 시즌 코드 규칙: SS{연도}(봄·여름) / AW{연도}(가을·겨울) 예) SS2026, AW2026
-    private static final Pattern SEASON_PATTERN = Pattern.compile("^(SS|AW)(\\d{4})$");
-
     private final CollectionRepository collectionRepository;
-    private final CharacterRepository characterRepository;
-    private final ProductRepository productRepository;
+    private final CharmRepository charmRepository;
     private final StoryRepository storyRepository;
     private final UserStoryProgressRepository userStoryProgressRepository;
     private final ObjectMapper objectMapper;
@@ -60,29 +50,19 @@ public class StoryService {
         }
 
         Long characterId = latestCollection.get().getCharacterId();
+        // 시즌은 항상 하나만 운영되므로 별도 시즌 판별 없이 해당 캐릭터의 스토리를 그대로 반환한다.
         List<Story> stories = storyRepository.findByCharacterIdOrderByIdAsc(characterId);
         if (stories.isEmpty()) {
             log.info("[StoryService] 스토리 목록 조회 완료(스토리 없음) - userId={}", userId);
             return StoryListResponse.empty();
         }
 
-        Map<String, List<Story>> storiesBySeason = stories.stream()
-                .collect(Collectors.groupingBy(Story::getSeason, LinkedHashMap::new, Collectors.toList()));
-
-        List<String> seasons = List.copyOf(storiesBySeason.keySet());
-        Character character = resolveCharacter(characterId);
-        String productSeason = resolveProductSeason(character);
-        String currentSeasonName = storiesBySeason.containsKey(productSeason)
-                ? productSeason
-                : resolveCurrentSeason(seasons);
-        List<Story> currentSeasonStories = storiesBySeason.get(currentSeasonName);
-
-        List<Long> storyIds = currentSeasonStories.stream().map(Story::getId).toList();
+        List<Long> storyIds = stories.stream().map(Story::getId).toList();
         Map<Long, UserStoryProgress> progressByStoryId = userStoryProgressRepository
                 .findByUserIdAndStoryIdIn(userId, storyIds).stream()
                 .collect(Collectors.toMap(UserStoryProgress::getStoryId, progress -> progress));
 
-        List<Story> sortedStories = currentSeasonStories.stream()
+        List<Story> sortedStories = stories.stream()
                 .sorted(Comparator.comparing(Story::getUnlockOrder))
                 .toList();
         List<StoryProgressResponse> storyResponses = new ArrayList<>();
@@ -106,13 +86,11 @@ public class StoryService {
                     return progress != null && progress.isDone();
                 });
 
-        log.info("[StoryService] 스토리 목록 조회 완료 - userId={}, currentSeason={}", userId, currentSeasonName);
+        log.info("[StoryService] 스토리 목록 조회 완료 - userId={}, count={}", userId, storyResponses.size());
         return StoryListResponse.builder()
-                .currentSeason(CurrentSeasonResponse.builder()
-                        .season(currentSeasonName)
-                        .stories(storyResponses)
-                        .allCompleted(allCompleted)
-                        .build())
+                .season(stories.get(0).getSeason())
+                .stories(storyResponses)
+                .allCompleted(allCompleted)
                 .build();
     }
 
@@ -153,17 +131,30 @@ public class StoryService {
                 .orElseGet(() -> UserStoryProgress.builder().userId(userId).storyId(storyId).build());
         progress.complete();
         userStoryProgressRepository.save(progress);
-        Character character = resolveCharacter(story.getCharacterId());
+        boolean seasonCompleted = isSeasonCompleted(userId, story);
 
-        log.info("[StoryService] 챕터 완료 처리 - userId={}, storyId={}", userId, storyId);
+        log.info("[StoryService] 챕터 완료 처리 - userId={}, storyId={}, seasonCompleted={}",
+                userId, storyId, seasonCompleted);
         return StoryCompleteResultResponse.builder()
                 .storyId(storyId)
                 .done(progress.isDone())
                 .readAt(progress.getReadAt())
-                .seasonCompleted(isSeasonCompleted(userId, story))
-                .characterName(character.getName())
-                .characterImgUrl(character.getImgUrl())
+                .seasonCompleted(seasonCompleted)
+                .charms(seasonCompleted ? findRewardCharms(story.getCharacterId(), story.getSeason()) : List.of())
                 .build();
+    }
+
+    // 시즌 완료 시 내려줄 참 목록 - 실제 보유 처리(CharmReceipt)는 하지 않고 완료 화면에 보여줄 정보만 반환한다.
+    private List<RewardCharmResponse> findRewardCharms(Long characterId, String season) {
+        List<Charm> charms = charmRepository.findByCharacterIdAndSeasonOrderByIdAsc(characterId, season);
+        return charms.stream()
+                .map(charm -> RewardCharmResponse.builder()
+                        .id(charm.getId())
+                        .name(charm.getName())
+                        .imgUrl(charm.getImgUrl())
+                        .collectionName(charm.getCollectionName())
+                        .build())
+                .toList();
     }
 
     // 1번 챕터는 항상 해금, 그 외는 직전 챕터를 이 유저가 완주했는지로 판단
@@ -208,18 +199,6 @@ public class StoryService {
                 .toList();
     }
 
-    private Character resolveCharacter(Long characterId) {
-        return characterRepository.findById(characterId)
-                .orElseThrow(() -> new CustomException(StoryErrorCode.CHARACTER_NOT_FOUND));
-    }
-
-    // 유저가 등록한 제품(캐릭터의 원본 제품) 자체의 season 값을 그대로 사용한다.
-    private String resolveProductSeason(Character character) {
-        Product product = productRepository.findById(character.getProductId())
-                .orElseThrow(() -> new CustomException(StoryErrorCode.PRODUCT_NOT_FOUND));
-        return product.getSeason();
-    }
-
     // 이 챕터가 속한 시즌의 모든 챕터를 이 유저가 완주했는지 (시즌 완료 화면 노출 여부)
     private boolean isSeasonCompleted(Long userId, Story story) {
         return isSeasonCompleted(userId, story.getCharacterId(), story.getSeason());
@@ -240,42 +219,6 @@ public class StoryService {
                     UserStoryProgress progress = progressByStoryId.get(s.getId());
                     return progress != null && progress.isDone();
                 });
-    }
-
-    // 오늘이 포함된 시즌을 current로 판단. 없으면 이미 시작된 시즌 중 가장 최근 것, 그것도 없으면 가장 이른 시즌으로 폴백한다.
-    private String resolveCurrentSeason(List<String> seasons) {
-        LocalDate today = LocalDate.now();
-        return seasons.stream()
-                .filter(season -> {
-                    LocalDate start = seasonStartDate(season);
-                    LocalDate end = seasonEndDate(season);
-                    return !today.isBefore(start) && !today.isAfter(end);
-                })
-                .findFirst()
-                .orElseGet(() -> seasons.stream()
-                        .filter(season -> !seasonStartDate(season).isAfter(today))
-                        .max(Comparator.comparing(this::seasonStartDate))
-                        .orElseGet(() -> seasons.stream()
-                                .min(Comparator.comparing(this::seasonStartDate))
-                                .orElse(seasons.get(seasons.size() - 1))));
-    }
-
-    private LocalDate seasonStartDate(String season) {
-        Matcher matcher = SEASON_PATTERN.matcher(season);
-        if (!matcher.matches()) {
-            return LocalDate.MIN;
-        }
-        int year = Integer.parseInt(matcher.group(2));
-        return "SS".equals(matcher.group(1)) ? LocalDate.of(year, 3, 1) : LocalDate.of(year, 9, 1);
-    }
-
-    private LocalDate seasonEndDate(String season) {
-        Matcher matcher = SEASON_PATTERN.matcher(season);
-        if (!matcher.matches()) {
-            return LocalDate.MIN;
-        }
-        int year = Integer.parseInt(matcher.group(2));
-        return "SS".equals(matcher.group(1)) ? LocalDate.of(year, 8, 31) : LocalDate.of(year + 1, 2, 28);
     }
 
     private StoryProgressResponse toStoryProgressResponse(Story story, UserStoryProgress progress, boolean locked) {
